# toy

./: .gitignore  CMakeLists.txt  README.md  a.txt
.cache/clangd/index/: AST.cpp.42057EE9260F7765.idx  AST.h.EC9BAD75158F8B06.idx  Lexer.h.A6A8935BED004128.idx  Parser.h.BC8622663FF232F2.idx  main.cpp.617E135964756F3D.idx  toyc.cpp.5BA04BBD7030E8FF.idx
include/toy/: Ops.td  Parser.h
test/: ast.toy
